# rs_organism

./: Cargo.toml  README.md
src/: aux.rs  config.json  config.rs  connector.rs  error.rs  lib.rs  main.rs  organism.json  organism_config.rs  placement.rs  recognizer.rs
src/config/: mod.rs
src/connector/: mod.rs
src/error/: mod.rs
src/placement/: mod.rs
src/recognizer/: mod.rs
